// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Draggable provider should render correctly to match snapshot 1`] = `
<div>
  <div
    class="react-draggable css-1bvz7hg"
    style="transform: translate(0px, 28px)translate(0px,0px);"
  >
    test
  </div>
</div>
`;

exports[`Draggable provider should render correctly with custom position 1`] = `
<div>
  <div
    class="react-draggable css-1bvz7hg"
    style="transform: translate(0px, 28px)translate(10px,10px);"
  >
    test
  </div>
</div>
`;

exports[`Draggable provider should render correctly with custom position for maximized 1`] = `
<div>
  <div
    class="react-draggable css-1bvz7hg"
    style="transform: translate(0px, 28px)translate(0px,0px);"
  >
    test
  </div>
</div>
`;
